--- a/app/src/main/res/layout/list_record.xml
+++ b/app/src/main/res/layout/list_record.xml
@@ -8,13 +8,13 @@
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="0"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:text="TextView"
-        android:textSize="20"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -29,7 +29,7 @@
         android:layout_marginEnd="16dp"
         android:text="TextView"
         android:textAlignment="viewEnd"
-        android:textSize="16"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
